# agentrunner

./: .gitignore  CLAUDE.md  INTERFACE.md  Makefile  README.md
.github/workflows/: publish-channel.yml  publish-go.yml
agentrunner/: README.md
agentrunner/channel/: channel.go  channel_test.go  jsonrpc.go  jsonrpc_test.go  mcp.go  mcp_test.go  smoke_test.go
agentrunner/claudecode/: runner.go  runner_test.go
docs/.vitepress/: config.ts
docs/guide/: channels.md  getting-started.md  runner-interface.md
docs/libraries/: go.md  typescript.md
docs/runners/: claude-code.md
go/: CLAUDE.md  README.md  runner.go
go/channel/: binary.go  binary_test.go  mcp.go  mcp_test.go
go/claudecode/: channel.go  options.go  parser.go  parser_test.go  runner.go  runner_test.go  (+1 more)
python/: README.md  pyproject.toml
python/channel/: pyproject.toml
python/channel/src/agentrunner_channel/: __init__.py
python/channel/tests/: test_binary.py
python/src/agentrunner/: __init__.py  errors.py  types.py
python/src/agentrunner/claudecode/: __init__.py  args.py  mapping.py  options.py  parser.py  process.py  runner.py  types.py  version.py
python/tests/claudecode/: test_args.py  test_mapping.py  test_parser.py  test_runner.py  test_version.py
scripts/: release.sh  sync-channel-version.sh
tasks/: 01kky8ved-support-include-partial-messages-flag-in-claude-co.md  01kky8wdz-add-include-partial-messages-example-to-claude-cod.md  01kkyd54q-refactor-to-session-object-pattern-read-side-only.md  01km3mmgw-add-vitepress-documentation-site-with-github-pages.md  01km3xmmm-add-eslint-9-to-typescript-library.md  01km6k23a-add-release-skills-and-ci-workflows-for-ts-python.md  01kma0s35-two-way-channels-support-via-session-send.md  01kmse9cq-channel-server-binary.md  01kmse9da-channel-cross-compilation.md  01kp0r2af-stream-json-input-for-client-to-session-messaging.md  01kpgqegk-custom-tools-support-for-go-claudecode-runner.md  01kpgs2q0-rename-agentrunner-channel-binary-to-agentrunner-m.md  review-go-library.md
ts/: CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
(+76 files in other folders)
