[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrunner"
version = "0.1.0"
description = "Python library for programmatically invoking AI coding agents"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrunner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
