[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driangle-agentrunner"
version = "0.0.1"
description = "Python library for programmatically invoking AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "driangle" },
]

[project.urls]
Homepage = "https://github.com/driangle/agentrunner"
Repository = "https://github.com/driangle/agentrunner"
Issues = "https://github.com/driangle/agentrunner/issues"

[project.optional-dependencies]
channel = [
    "agentrunner-channel>=0.0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrunner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
