[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrunner-channel"
version = "0.1.0"
description = "agentrunner-channel binary distribution"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrunner_channel"]

[tool.hatch.build]
artifacts = ["src/agentrunner_channel/bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
